[package]
name = "judger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
regex = "1.9.5"
log = "0.4.8"
log4rs = "1.2.0"
redis = "0.23.3"
ansi_term = "0.12.1"

tokio = { version = "1.0", features = ["full"] }